--- a/spas/src/App.css
+++ b/spas/src/App.css
@@ -1,8 +1,17 @@
+
+/* Background Image */
+html { 
+  background: url(./images/victoria-palacios-423143-unsplash.jpg) no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 body {
   font-family: 'Lato', sans-serif;
   color: white;
   text-align: center;
-
 }
 
 p {
@@ -30,7 +39,7 @@ h1 {
 
 .display {
   font-size: 5em;
-  color: cyan;
+  color: chartreuse;
 }
 
 h3 {
@@ -46,53 +55,19 @@ h3 {
   grid-template-columns: repeat(9, 1fr);
   grid-template-rows: minmax(100px, auto);
   grid-template-areas: 
-    "nav"  
+    "navbar"
     "billboard"
+    "about"
     "work"
-    "gallery"
+    "cards"
     "sidebar"
     "footer";
 }
 
+/* CARD STYLE */
 .card-box {
-
+  margin: 50px 0 100px 0;
   grid-column: 2/9;
   grid-row: 20/25;
-
 }
-
-.card {
-  transition: 0.3s;
-  color: black;
-}
-
-.card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-
-.card-container {
-  padding: 2px 16px;
-}
-
-.card-content {
-  grid-column: auto;
-}
-
-.card-grid > div {
-  border: 1px solid #ccc;
-  box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
-}
-.card-grid > div img {
-  max-width: 100%;
-}
-.text {
-  padding: 0 20px 20px;
-}
-.text > button {
-  background: #2c3824;
-  border: 0;
-  color: white;
-  padding: 10px;
-  width: 100%;
-  }
 
