--- a/spas/src/components/Arrow/Arrow.css
+++ b/spas/src/components/Arrow/Arrow.css
@@ -1,7 +1,7 @@
 
   .downArrow{
       position: fixed;
-      bottom: 5%;
+      bottom: 10px;
       left: 50%;
   }
   .bounce {
@@ -15,12 +15,12 @@
       transform: translateY(0);
     }
     40% {
-      -moz-transform: translateY(-30px);
-      transform: translateY(-30px);
+      -moz-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
     60% {
-      -moz-transform: translateY(-15px);
-      transform: translateY(-15px);
+      -moz-transform: translateY(-5px);
+      transform: translateY(-5px);
     }
   }
   @-webkit-keyframes bounce {
@@ -29,12 +29,12 @@
       transform: translateY(0);
     }
     40% {
-      -webkit-transform: translateY(-30px);
-      transform: translateY(-30px);
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
     60% {
-      -webkit-transform: translateY(-15px);
-      transform: translateY(-15px);
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px);
     }
   }
   @keyframes bounce {
@@ -45,16 +45,16 @@
       transform: translateY(0);
     }
     40% {
-      -moz-transform: translateY(-30px);
-      -ms-transform: translateY(-30px);
-      -webkit-transform: translateY(-30px);
-      transform: translateY(-30px);
+      -moz-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+      -webkit-transform: translateY(-10px);
+      transform: translateY(-10px);
     }
     60% {
-      -moz-transform: translateY(-15px);
-      -ms-transform: translateY(-15px);
-      -webkit-transform: translateY(-15px);
-      transform: translateY(-15px);
+      -moz-transform: translateY(-5px);
+      -ms-transform: translateY(-5px);
+      -webkit-transform: translateY(-5px);
+      transform: translateY(-5px);
     }
   }
   
