--- a/spas/src/components/Navbar/Navbar.css
+++ b/spas/src/components/Navbar/Navbar.css
@@ -1,18 +1,30 @@
 
 .navbar {
     position:fixed;
+    z-index: 0;
     left:0px;
     top:0px;
     height:40px;
     width:100%;
     background:transparent;
  }
+
 .navbar-line {
     border-bottom: 1px solid white;
     height: 40px;
     margin: 10px 20px 10px 20px;
 }
+
  .navbar-line ul li {
     display: inline;
     margin: 0 5px 0 5px;
  }
+
+ .navbar a {
+     text-decoration: none;
+     color: white;
+ }
+
+ .navbar a:hover {
+    color: chartreuse;
+}
