--- a/spas/src/components/About/About.css
+++ b/spas/src/components/About/About.css
@@ -1,15 +1,9 @@
-.about-image { grid-area: about-image; grid-column: 1/4;}
-.about-about { grid-area: about-about; grid-column: 4/7;}
-
-
+/* FULLY RESPONSIVE CSS GRID */
 .about-grid-container {
   display: grid;
-  grid-template-columns: repeat(6,1fr);
-  grid-template-rows: minmax(50px,auto);
-  grid-template-areas:
-    'about-image about-about';
-  grid-gap: 10px;
-  align-items: center;
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-gap: 20px;
+  align-items: stretch;
   color: black;
   padding: 10px;
   background-color: none;
@@ -19,4 +13,10 @@
 }
 .about-content-wrapper {
     padding: 30px;
+}
+
+.about-image {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
