--- a/spas/src/components/Navbar/Navbar.css
+++ b/spas/src/components/Navbar/Navbar.css
@@ -1,23 +1,26 @@
 
 .navbar {
     position:fixed;
-    z-index: 0;
+    z-index: 1000;
     left:0px;
     top:0px;
-    height:40px;
+    height:57px;
     width:100%;
-    background:transparent;
+    background:rgb(0, 0, 0, .4);
+    text-align: center;
+    margin: 0px;
+
  }
 
 .navbar-line {
     border-bottom: 1px solid white;
     height: 40px;
-    margin: 10px 20px 10px 20px;
 }
 
  .navbar-line ul li {
-    display: inline;
+    display: inline-block;
     margin: 0 5px 0 5px;
+    vertical-align: middle;
  }
 
  .navbar a {
@@ -27,4 +30,10 @@
 
  .navbar a:hover {
     color: chartreuse;
+}
+
+.navbar img{
+    padding: 4px 0 4px 0;
+    margin: 0 5px 0 5px;
+    background-color: rgb(0, 0, 0, 0.75);
 }
