--- a/spas/src/components/About/About.css
+++ b/spas/src/components/About/About.css
@@ -4,7 +4,7 @@
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 20px;
   align-items: stretch;
-  color: black;
+  color: white;
   padding: 10px;
   background-color: none;
   text-align: center;
