--- a/spas/src/components/Dotnav/Dotnav.css
+++ b/spas/src/components/Dotnav/Dotnav.css
@@ -11,4 +11,14 @@
 }
 .dot-nav ul {
 	list-style-type: none;
+	text-align: center;
+}
+.dot-nav ul li {
+	width: 10px;
+}
+
+.dot-nav ul li a:hover svg {
+	top: 0;
+	right: 0;
+	width: 10px;
 }
